# DeltapatcherForDELTARUNERandovania

./: .gitignore  deltpatcher.py  pyproject.toml  setup.cfg  setup.py
__pyinstaller/: hook-deltarune_rando_patcher.py
