[metadata]
name = open-dread-rando
description = DELTARUNE Randovania Patcher
long_description = The patcher for the DELTARUNE Randovania addition.
long_description_content_type = text/markdown
url = https://github.com/jonloveslegos/DeltapatcherForDELTARUNERandovania
author = jonloveslegos

classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9

[options]
packages = open_dread_rando
install_requires =
    mercury-engine-data-structures>=0.12.0
    jsonschema>=4.0.0
    ips.py>=0.1.2

include_package_data = True
zip_safe = False
python_requires = >=3.9

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock

#
# Entry Points for PyInstaller
# ---------------------------------
[options.entry_points]
pyinstaller40 =
    # .. _hook_registration:
    #
    # **Hook registration**: This entry point refers to a function
    # that will be invoked with no parameters. It must return a
    # sequence of strings, each element of which provides an
    # additional absolute path to search for hooks. This is equivalent
    # to passing the ``additional-hooks-dir`` `command-line option
    # <https://pyinstaller.readthedocs.io/en/stable/usage.html#what-to-bundle-where-to-search>`_
    # to PyInstaller for each string in the sequence.
    #
    # In this project, the function is ``get_hook_dirs``.
    hook-dirs = __pyinstaller:get_hook_dirs